@@ -2485,6 +2485,15 @@ slz_edict_of_expulsion_mission = {
 	global_heretic_missionary_strength = 0.02
 	global_unrest = -1
 }
+slz_rival_aquileia_mission = {
+    papal_influence = 1
+    tolerance_own = 1
+}
+slz_der_kurprinz_mission = {
+    diplomats = 1
+    church_loyalty_modifier = 0.05
+    global_tax_modifier = 0.1
+}
 
 
 #Misc
