@@ -1302,7 +1302,6 @@ country_event = {
 			}
 			set_government_rank = 5
 		}
-		add_prestige = 25
 		add_legitimacy = 20
     }
 }
@@ -1330,12 +1329,10 @@ country_event = {
 		}
 		stability = 1
 		calc_true_if = {
-			OR = {
-				MAZ = {
-					OR = {
-						exists = no
-						is_subject = yes
-					}
+			MAZ = {
+				OR = {
+					exists = no
+					is_subject = yes
 					NOT = {
 						any_owned_province = {
 							superregion = poland_superregion
@@ -1343,12 +1340,10 @@ country_event = {
 					}
 				}
 			}
-			OR = {
-				SIL = {
-					OR = {
-						exists = no
-						is_subject = yes
-					}
+			SIL = {
+				OR = {
+					exists = no
+					is_subject = yes
 					NOT = {
 						any_owned_province = {
 							superregion = poland_superregion
@@ -1356,12 +1351,10 @@ country_event = {
 					}
 				}
 			}
-			OR = {
-				WKP = {
-					OR = {
-						exists = no
-						is_subject = yes
-					}
+			WKP = {
+				OR = {
+					exists = no
+					is_subject = yes
 					NOT = {
 						any_owned_province = {
 							superregion = poland_superregion
@@ -1369,12 +1362,10 @@ country_event = {
 					}
 				}
 			}
-			OR = {
-				SDZ = {
-					OR = {
-						exists = no
-						is_subject = yes
-					}
+			SDZ = {
+				OR = {
+					exists = no
+					is_subject = yes
 					NOT = {
 						any_owned_province = {
 							superregion = poland_superregion
@@ -1382,12 +1373,10 @@ country_event = {
 					}
 				}
 			}
-			OR = {
-				KRA = {
-					OR = {
-						exists = no
-						is_subject = yes
-					}
+			KRA = {
+				OR = {
+					exists = no
+					is_subject = yes
 					NOT = {
 						any_owned_province = {
 							superregion = poland_superregion
@@ -1395,7 +1384,7 @@ country_event = {
 					}
 				}
 			}
-			amount = 4
+			amount = 2
 		}
 	}
 
@@ -1408,7 +1397,6 @@ country_event = {
 		ai_chance = { factor = 100 }
 		add_stability_or_adm_power = yes
 		set_global_flag = fragmentation_of_poland_ended
-		add_prestige = 25
 		add_legitimacy = 20
 		if = {
 			limit = {
