@@ -213,8 +213,8 @@
  UNLAWFULTOOL: "Cannot Demand Unlawful Territory until passing the §YHofgericht§! reform"
  RECRUIT_NO_IDEA: "Unavailable"
  CANTWARNDIP: "Ruler must have Diplomatic Skill of §Y5§! or higher to send Warnings"
- ONLYFRENCHFIEF: "Only Principalities can be made Appanages"
- ONLYFRENCHFIEFREQ: "Only Principalities titles can become Appanages"
+ ONLYFRENCHFIEF: "Only Russian Principalities can be made Appanages"
+ ONLYFRENCHFIEFREQ: "Only Russian Principalities titles can become Appanages"
  CANTFREECITY: "Cannot Grant Free Cities until passing the §YStatutum Principum§! reform"
  CANTCOMMUNE: "Cannot Grant Free City to §YItalian Communes§!"
  CANTGRANTELEC: "Cannot Grant Electorates until passing the §YIssue Chrysobull§! reform"
