@@ -213,8 +213,8 @@
  UNLAWFULTOOL: "Bis zur §YHofgericht§!-Reform kann kein unrechtmäßiges Gebiet gefordert werden"
  RECRUIT_NO_IDEA: "Nicht erreichbar"
  CANTWARNDIP: "Herrscher muss ein diplomatisches Geschick von mindestens §Y5§! besitzen, um andere Nationen zu warnen."
- ONLYFRENCHFIEF: "Nur Fürstentümer können zu Apanagen erklärt werden"
- ONLYFRENCHFIEFREQ: "Nur Fürstentümer können zu Apanagen werden"
+ ONLYFRENCHFIEF: "Nur Russische Fürstentümer können zu Apanagen erklärt werden"
+ ONLYFRENCHFIEFREQ: "Nur Russische Fürstentümer können zu Apanagen werden"
  CANTFREECITY: "Bis zur §YStatutum Principum§!-Reform können keine freien Reichsstädte ernannt werden"
  CANTCOMMUNE: "§YItalienische Gemeinden§! können nicht zu freien Reichsstädten ernannt werden"
  CANTGRANTELEC: "Bis zur §YGoldenen Bulle§!-Reform können keine Kurfürsten ernannt werden"
