@@ -1,9 +1,15 @@
 ### Voltaire's Nightmare Changelog ###
+
 # v 2.0.5 #
--Small fixes for the following mission trees: Venice
--Fixed a major bug preventing the Emperor from demanding unlawful territory when playing with the Emperor dlc
+
+-Small fixes for the following mission trees: Venice, Palatinate
+-Fixed a major bug preventing the Emperor from demanding unlawful territory with Emperor DLC
 -Allowed Free Cities to form and join trade leagues again
--Fixed unit spawing in the Fall of Arpads disaster
+-Fixed unit spawns in the Fall of Arpads disaster
+-Fixed oversight that made ending Fragmentation of Poland unfairly difficult
+-Made the decision to reform Poland slightly easier
+-Extended Salzburg's mission tree (contribution by FrenchKnight)
+-Other small localization fixes
 
 # v 2.0.4 #
 
